--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+<!-- just begin -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!-- Image and text -->
