--- a/index.html
+++ b/index.html
@@ -1,17 +1,100 @@
 <html>
 
 <head>
-    <link rel="icon" href="images/com.jpg" >
+    <link rel="icon" href="images/com.jpg">
     <title>Route Exam #2</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/23268b53f1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <div class="sectionone">
+        <div class="menu d-flex flex-column align-content-between justify-content-between text-center">
+            <ul class=" text-left p-2">
+                <li class="item item1" id="iteem">
+                    <a href="" class="category">
+                         Now playing
+                    </a>
+                </li>
+                <li class="item item1">
+                    <a href="" class="category">
+                      Popular                  </a>
+                </li>
+                <li class="item item1">
+                    <a href="" class="category">
+                      Top Rated                </a>
+                </li>
+                <li class="item item1">
+                    <a href="" class="category">
+                      Trending                  </a>
+                </li>
+                <li class="item item1">
+                    <a href="" class="category">
+                      Upcoming                  </a>
+                </li>
+                <li class="item item1">
+                    <a href="" class="category">
+                      Contact Us                  </a>
+                </li>
+            </ul>
+            <div class=" undercontent d-flex flex-column align-content-between justify-content-between text-center my-3">
+                <div class="icons flex-row   my-3 ">
+                    <i class="fab fa-facebook-f mx-2 "></i>
+                    <i class="fab fa-twitter mx-2"></i>
+                    <i class="fas fa-globe mx-2"></i>
+                </div>
+                <div class="copy d-flex ">
+                    <p>Copyright Â© 2019 All Rights Reserved.</p>
+                </div>
+            </div>
+        </div>
+        <div class="slidebar  d-flex flex-column align-content-between justify-content-between text-center ">
+            <div class=" logos">
+                <img src="images/logo.png">
+            </div>
+            <div class=" logos ">
+                <!-- <i class="fas fa-bars"></i> -->
+                <i class="fas fa-times "></i>
+            </div>
+            <div class="Akher d-flex flex-column  my-4">
+                <i class="fas fa-globe my-4"></i>
+                <i class="fas fa-share-alt "></i>
+            </div>
+        </div>
+    </div>
 
 
-  
+    <div class="second w-75 ">
+        <div class="bg-info w-75  h-100 m-auto">
+        </div>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -21,17 +104,11 @@
 
 
     <!-- JavaScript Links -->
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
-    <script src="./js/script.js"></script>
+    <script src=" js/jquery-3.5.1.min.js "></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js " integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js " integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s " crossorigin="anonymous "></script>
+    <script src="./js/script.js "></script>
 </body>
 
 </html>
