--- a/index.html
+++ b/index.html
@@ -3,39 +3,41 @@
 <head>
     <link rel="icon" href="images/com.jpg">
     <title>Route Exam #2</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/23268b53f1.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div class="sectionone">
+    <div class="sectionone" id="main">
         <div class="menu d-flex flex-column align-content-between justify-content-between text-center">
             <ul class=" text-left p-2">
-                <li class="item item1" id="iteem">
-                    <a href="" class="category">
-                         Now playing
+
+                <li class="item item1 ">
+                    <a href="" class="">
+                        Now playing
                     </a>
                 </li>
                 <li class="item item1">
-                    <a href="" class="category">
-                      Popular                  </a>
+                    <a href="" class="">
+                        Popular </a>
                 </li>
                 <li class="item item1">
-                    <a href="" class="category">
-                      Top Rated                </a>
+                    <a href="" class="">
+                        Top Rated </a>
                 </li>
                 <li class="item item1">
-                    <a href="" class="category">
-                      Trending                  </a>
+                    <a href="" class="">
+                        Trending </a>
                 </li>
                 <li class="item item1">
-                    <a href="" class="category">
-                      Upcoming                  </a>
+                    <a href="" class="">
+                        Upcoming </a>
                 </li>
                 <li class="item item1">
-                    <a href="" class="category">
-                      Contact Us                  </a>
+                    <a href="" class="">
+                        Contact Us </a>
                 </li>
             </ul>
             <div class=" undercontent d-flex flex-column align-content-between justify-content-between text-center my-3">
@@ -54,8 +56,8 @@
                 <img src="images/logo.png">
             </div>
             <div class=" logos ">
-                <!-- <i class="fas fa-bars"></i> -->
-                <i class="fas fa-times "></i>
+                <i id="btnopen" class="fas fa-bars"></i>
+                <i id="btnclose" class="fas fa-times  "></i>
             </div>
             <div class="Akher d-flex flex-column  my-4">
                 <i class="fas fa-globe my-4"></i>
@@ -63,11 +65,60 @@
             </div>
         </div>
     </div>
-
-
-    <div class="second w-75 ">
-        <div class="bg-info w-75  h-100 m-auto">
+    <div class="second w-75 d-flex flex-row pt-5">
+        <div class="search1  h-100 w-50 my-3">
+            <input class="form-control searchinput w-100  h-100" type="text" placeholder="get Movies by word">
         </div>
+        <div class="search1  h-100 w-50 my-3">
+            <input class="form-control searchinput w-100  h-100" type="text" placeholder="Search">
+        </div>
+    </div>
+
+
+    <br><br><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="movies w-100 h-100 badge-info">
+
+
+
+
+
+
+
+
+
+
+
 
 
     </div>
@@ -76,6 +127,104 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="myForm w-100 h-75 ">
+
+
+
+        <form class="container w-75 my-5 mx-auto ">
+            <h3 class="p-2"> Contact Us ....</h3>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" class=" form-control" placeholder="Enter your name ">
+                        <div class="alert alert-danger">Your name is not vaild</div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" class=" form-control" placeholder="Enter Email">
+                        <div class="alert alert-danger">Enter valid emial</div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" class=" form-control" placeholder="Enter phone">
+                        <div class="alert alert-danger">Enter valid phone</div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" class=" form-control" placeholder="Enter Age">
+                        <div class="alert alert-danger">Enter valid age</div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" class=" form-control" placeholder="Enter Password ">
+                        <div class="alert alert-danger">entre valid password *Minimum eight characters, at least one letter and one number:*</div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" class=" form-control" placeholder="Enter Repassword">
+                        <div class="alert alert-danger">Enter valid rePassword</div>
+                    </div>
+                </div>
+
+
+
+
+
+
+            </div>
+
+
+
+
+
+            <button type="submit" class="btn btn-danger">Submit</button>
+            <br>
+            <br>
+            <br>
+        </form>
+
+
+
+
+
+
+    </div>
 
 
 
@@ -104,11 +253,17 @@
 
 
     <!-- JavaScript Links -->
-    <script src=" js/jquery-3.5.1.min.js "></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js " integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js " integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s " crossorigin="anonymous "></script>
-    <script src="./js/script.js "></script>
+    <script src="js/jquery-3.5.1.min.js "></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+    <!-- WoW -->
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Wow -->
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
